# ferris-say

./: README.md  package-lock.json  package.json
src/: index.html  init.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/client/: Cargo.toml  tauri.conf.json
src-tauri/client/src/: command.rs  main.rs  settings.rs
src-tauri/server/: Cargo.toml
src-tauri/server/src/: main.rs
src-tauri/src/: command.rs  main.rs  settings.rs
src-tauri/src/ws/: message.rs
src-tauri/src/ws/client/: client.rs
src-tauri/src/ws/server/: server.rs
src-tauri/websocket/: Cargo.toml
src-tauri/websocket/src/: client.rs  message.rs  server.rs
